html file fixed

--- a/Assignment_1/form.html
+++ b/Assignment_1/form.html
@@ -13,10 +13,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index4.html ">Home</a>
+                    <a href="index.html ">Home</a>
                 </li>
                 <li>
-                    <a href="index5.html">Sign Up</a>
+                    <a href="form.html">Sign Up</a>
                  </li>
             </ul>
         </nav>
