--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index4.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
-                    <a href="index5.html">Sign Up for Altschool</a>
+                    <a href="/Assignment_1/form.html">Sign Up for Altschool</a>
                 </li>
             </ul>
         </nav>
